<resources>
    <string name="app_name">Website Development Tutorials</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="html_definition"> HTML stands for Hyper Text Markup Language. It was created vy Berners-Lee in late 1991, which is the most widely used language on web to develop web pages. \n\n Web browsers can read HTML files and compose them into visible or audible web pages. Browsers do not display the HTML tags and scripts, but use them to interpret the content of the page. HTML describes the structure of a webpage semantically along with cues for presentation, making it a markup language, rather than a programming language. </string>
    <string name="html_getting_started"> HTML files are just simple text files, so to start writing in HTML, you need a simple text editor like Notepad(PC) or TextEdit(Mac) will be easy. HTML can be edited by using a professional HTML editor like Adobe Dreamweaver, MIcrosoft Expression Web, CoffeeCup HTML Editor. \n You can try HTML in your phone itself by clicking on below button </string>
    <string name="cms_def">A Content Management System (CMS) or Website Building Platform is a user friendly platform for building websites and managing your own online content, instead of using a bunch of HTML codes. \n It helps users who does not have basic knowledge about programming to build a website by themselves very easily, it is as easy as working on word processing tool. \n Using CMS maintaining the site and modifying and doing changes in the design of the website is too simple. \n There are many CMS available but WORDPRESS, JOOMLA and DRUPAL are widely used. In these three, the most easy to use and very popular CMS is wordpress.</string>
    <string name="select_box_using_ng_repeat">You can also use the ng-repeat directive to make the same dropdown list, the ng-repeat directive
repeats a block of HTML code for each item in an array, it can be used to create options in a
dropdown list, but the ng-options directive was made especially for filling a dropdown list with
    options"</string>
    <string name="select_box_using_ng_repeat2">The advantage of using ng-option is, Dropdowns made with ng-options allows the selected value to
be an object, while dropdowns made from ng-repeat has to be a string.</string>
    <string name="datasource">In the below example, selected value will always be the value in a key-value pair, the value in a
key-value pair can also be an object. The options in the dropdown list does not have to be the key in
a key-value pair, it can also be the value, or a property of the value object.</string>
    <string name="angularmodel">The ngModel directive binds an input ,select, textarea (or custom form control) to a property on the
scope using NgModelController, which is created and exposed by this directive.
ngModel is responsible for:
Binding the view into the model, which other directives such as input, textarea or select require.
Providing validation behavior (i.e. required, number, email, url).
Keeping the state of the control (valid/invalid, dirty/pristine, touched/untouched, validation errors).
Setting related css classes on the element (ng-valid, ng-invalid, ng-dirty, ng-pristine, ng-touched,
ng-untouched, ng-empty, ng-not-empty) including animations.
Registering the control with its parent form.</string>
    <string name="angularmodel2">One of the core feature of AngularJS which makes it popular is two way data binding. In two way
data binding, any changes to the model are immediately reflected in the View and any changes in
the View updates the model.</string>
    <string name="angularevents">AngularJS has its own HTML events directives, the event directives allows us to run AngularJS
functions at certain user events. An AngularJS event will not overwrite an HTML event, both events
will be executed.</string>
    <string name="toggle">Toggle is used to show a section of HTML code when a button is clicked and hide when the button
is clicked again, like a dropdown menu,this will make the button behave like a toggle switch.</string>
    <string name="eventobject">You can pass</string>
    <string name="api">The angular.isString is used to find out if the reference is string or not, if it is a string it return True.
The angular.isNumber is used to find out if the reference is number or not, if it is a number it returns
True.</string>
    <string name="scope1">The scope is the binding part between the HTML (view) and the JavaScript (controller).The scope
is an object with the available properties and methods, is available for both the view and the
controller.</string>
    <string name="scope2">When adding properties to the $scope object in the controller, the view (HTML) gets access to these
properties. In the view, you do not use the prefix $scope, you just refer to a propertyname, like
{{bikename}}.</string>
    <string name="scope3">It is important to know which scope you are dealing with, at any time.In the two examples above
    there is only one scope, so knowing your scope is not an issue, but for larger applications there can
    be sections in the HTML DOM which can only access certain scopes.</string>
    <string name="anim3"> The ngAnimate module adds and removes classes. The ngAnimate module does not animate your
    HTML elements, but when ngAnimate notice certain events, like hide or show of an HTML
    element, the element gets some pre-defined classes which can be used to make animations.</string>
    <string name="anim4">The ng-show and ng-hide directives adds or removes a ng-hide class value. The other directives
adds a ng-enter class value when they enter the DOM, and a ng-leave attribute when they are
removed from the DOM.</string>
    <string name="anim5">The ng-repeat directive also adds a ng-move class value when the HTML element changes position.
    In addition, during the animation, the HTML element will have a set of class values, which will be
    removed when the animation has finished. Example: the ng-hide directive will add these class
        values.</string>
    <string name="drupal1">Drupal a free and open-source content-management system and third most popular CMS behind
Wordpress and Joomla, it provides a back-end framework for at least 2.2% of all Web sites worldwide
ranging from personal blogs to corporate, political, and government sites.</string>
    <string name="drupal2">As of April 2015 the Drupal community, comprising more than one million members (as of October
2013)and over 30,000 developers (as of February 2014),has contributed more than 33,000 modules
that alter and extend the core capabilities, behavior, and appearance of a Drupal site.</string>
    <string name="dropdown">The graphical control element accordion is a vertically stacked list of items, such as labels or
thumbnails. Each item can be "expanded" or "stretched" to reveal the content associated with that
item. Accordions are useful when you want to toggle between hiding and showing large amount of
content.</string>
    <string name="tooltip">The tooltip is a common graphical user interface element. It is used in conjunction with a cursor,
usually a pointer. The user hovers the pointer over an item, without clicking it, and a tooltip may
appear as a small "hover box" with information about the item being hovered over.</string>
    <string name="progressbar">A progress bar is a graphical control element used to visualize the progression of an extended
computer operation, such as a download, file transfer, or installation. Sometimes, the graphic is
accompanied by a textual representation of the progress in a percent format.</string>
    <string name="hovdrop">A drop-down is a graphical control element, similar to a list box, that allows the user to choose one
value from a list. When a drop-down list is inactive, it displays a single value. When activated, it
displays (drops down) a list of values, from which the user may select one. In Hoverable Dropdown
the dropdown gets activated just by hovering the menu.</string>
    <string name="wordpress1">If you know how to use Microsoft Word or any word processor, you already know how add your
own content. WordPress can be expanded with free plugins to handle just about any site you can
imagine,from amazing small business pages to social networking sites. With plugins you will be able
to add contact forms, subscription forms, image galleries and so on for your website.</string>
    <string name="wordpress2">WordPress does not cost you anything to download or install it is absolutely free, and there is  a huge
    community who have designed beautiful themes and templates, making it easy to build any website
    very easily.</string>
    <string name="wordpress3">The website you build will instantly be responsive, looking great on every mobile device,
smartphone and tablet. No need to fiddle around with codes to make it responsive .</string>
    <string name="wordpress4">With so many people using the platform, it is easy to find QUICK help when you need it. In
addition, WordPress has lots of free resources both available on Youtube and in various support
forum</string>
    <string name="wordpress5">Hosting is a service that connects your site to the internet, hosting allows individuals and
organizations to make their website accessible via the World Wide Web. Web hosts are companies
that provide space on a server owned or leased for use by clients, as well as providing Internet
connectivity, typically in a data center.
The WordPress platform itself is absolutely free, but a domain name and hosting will cost you
money,on a average domain name per year cost $9 per year, Basic hosting can be bought from as
low as $1 per month. There are many Hosting and Domain companies available like godaddy,
BlueHost, Hostgator, bigrock, You can choose any service provider which suits your needs.</string>
    <string name="wordpress6">Choosing a domain name is similar to choosing a company name - it requires a lot of thought and
consideration. Your domain name is your identity on the web; you want to make sure you choose a
name that not only fits your business, but is also easy to find and promote.</string>
    <string name="wordpress8">There are millions of registered domain names, so having a domain that is catchy and memorable is
essential.Try using keywords that describe your business and the services you offer</string>
    <string name="wordpress9">Extensions are suffixes, such as .com or .net, at the end of web addresses. These can have specific
uses, so make sure to choose one that works for your business. The .com domain extension is far
and away the most popular</string>
    <string name="wordpress10">Almost every reliable and well-established hosting company has integrated 1 click installation for
WordPress, which makes getting going very easy.
If you signed up with Bluehost or Hostgator or any other similar hosting company, you should find
your 1 click installation in your  account control panel.
Here are the steps you should follow (should be similar/same on all the major web hosting
companies):
Log in to your hosting account.
Go to your control panel.
Look for the WordPress icon.
Choose the domain where you want to install your website. Click the Install Now button and you
should get access to your NEW WordPress website.</string>
    <string name="wordpress12">After successful installation of WordPress to your domain, you will see a very basic clean site.
default wordpress
To change the default basic design of the site to a professionally designed site, we need the a theme
 a design template that tells WordPress how your website should look. In wordpress there are
thousands of awesome, professionally designed themes you can choose from and customize for a
site by yourself.</string>
</resources>